load exlib automatically

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,7 @@
         <script src="zscheme/pachycephalo_code.js"></script>
         <script src="zscheme/compile.js"></script>
         <script src="zscheme/zutsuki.js"></script>
+        <script src="zscheme/std_exlib.js"></script>
 
     </head>
 
@@ -54,8 +55,6 @@
                     }
                 }
             }
-            console.log(repl_obj);
-            console.log(myterm);
 
 
         </script>
